Fix alignment issue with quote format previews

--- a/style.scss
+++ b/style.scss
@@ -379,7 +379,7 @@ blockquote {
             content: '“';
             position: absolute;
             font-size: 100px;
-            left: -40px;
+            left: -60px;
             top: -40px;
         }
     }
